Updated style and cleaned up html files

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,13 +2,16 @@
  * This file provides css styles.
  */
 
-body,html {
+html {
 	background-color: #f5f7fa;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	margin: 0 auto;
 	font-family: Lato,sans-serif;
 	color: #283D56;
+}
+body {
+	height:100%;
 }
 
 /* header footer common */
@@ -21,6 +24,10 @@ header, footer {
 	text-align: center;
 }
 
+.fluid-container {
+	overflow:hidden;
+	position: relative;
+}
 #mainmenu {text-align:right;}
 #mainmenu ul {
 	list-style:none;
@@ -32,12 +39,15 @@ header, footer {
 	display:inline;
 	margin-left:20px;
 }
+
 #mainmenu ul li a:hover {
 	border-bottom: solid 1px #8d6daa;
 	text-decoration: none;
+	color: #8d6daa;
 }
 #mainmenu ul li a {
 	color: #fff;
+  color: #35B297;
 	text-transform: uppercase;
 	font-size: 15px;
 	display: inline-block;
@@ -47,12 +57,14 @@ header, footer {
 	border-bottom: solid 1px transparent;
 	transition: border-bottom .25s ease;
 }
+#mainmenu ul li.active a {
+	border-bottom:1px solid #35B297;
+}
 
 #mainmenu ul li.lang a {
 	padding:0;
 }
 #mainmenu ul li.lang {
-	background-color: #8d6daa;
 	border-radius: 50%;
 	width: 36px;
 	height: 36px;
@@ -62,10 +74,10 @@ header, footer {
 }
 #mainmenu ul li.lang a:hover {
 	text-decoration: none;
-	border-bottom: solid 1px #633689;
+	border-bottom: solid 1px transparent;
 }
 #mainmenu ul li.lang:hover {
-    background-color: #3f125e;
+    /* background-color: #3f125e; */
 		text-decoration: none;
 		border:none;
 }
@@ -78,10 +90,8 @@ h2,h3,h4 {
 	margin:0;
 }
 
-
-.container {
-
-}
+a {color:#35B297;}
+a:hover {color:#8d6daa;}
 
 .banner {
 	background: #5586D6;
@@ -98,6 +108,8 @@ header {
 footer {
 	padding: 10px;
 	font-size: .8rem;
+	background: #fff;
+	margin-top: 4em;
 }
 .title, .tips {
 	height: 30px;
@@ -206,18 +218,11 @@ a.logo {
 }
 .newappIcon {
   display: inline;
-	width:100%;
 	min-width:34px;
   max-width: 100px;
-  max-height: 100px;
+  max-height: 70px;
   margin: 0 auto;
-	padding: 10px;
-	border: 1px solid white;
-	border-radius: 5px;
-	background: #8d6daa;
-	opacity: 1;
 	vertical-align: middle;
-	/* margin-bottom:12px; */
 }
 .login {
 	display:inline;
@@ -273,20 +278,27 @@ a.logo {
 	top:15px;
 	right:20px;
 	background:red;
-	width:40px;
-	height:40px;
-	background: url("../images/whamburger.png")no-repeat center;
-	background-size:contain;
+	width:34px;
+	height:34px;
+	background: url(../images/whamburger.png)no-repeat center;
+	background-size: 69%;
+	background-color: #35B297;
+	border-radius: 50%;
 }
+header .mobile-lang {display:none;}
 header {
 	background:#633689;
+	background:#fff;
 	overflow: auto;
 	display: flex;
 	flex-direction: column;
+	border-bottom: 1px solid purple;
+	box-shadow: 1px -4px 20px black;
+	position: relative;
+	z-index: 999;
 }
 .bannerimg {
 	width:100%;
-	/* position:absolute; */
 }
 .intro {
 	margin-top:-6rem;
@@ -308,6 +320,7 @@ header {
 }
 .purplebox {
 	background-color: #8d6daa;
+	background-color: #35B297;
 	color: #fff;
 }
 .intro ul {
@@ -340,8 +353,10 @@ dd {
 	position:fixed;
 	right:20px;
 	bottom:20px;
+	z-index:999;
 }
 button[type=submit] ,
+#regForm input[type=submit] ,
 .adminPanel input {
 	-webkit-appearance: button;
 	height: 42px;
@@ -434,8 +449,15 @@ button[type=submit] ,
 		padding:1rem;
 	}
 	#mainmenu {display:none;}
-	#hamburger {display:block;top:auto;bottom:18px;}
+	#mm-mainmenu .lang {display:none;}
+	#hamburger {display:block;top:auto;bottom:20px;}
 	.login {display:block;white-space: nowrap;}
+	header .mobile-lang {
+		display: inline-block;
+		position: absolute;
+		right: 90px;
+		bottom: 20px;
+	}
 }
 
 /* // Large devices (desktops, 992px and up) */
