--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- //Favicon tags -->
+	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<title><%= title %></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
@@ -17,51 +36,65 @@
 <body>
 	<div id="wrap">
 
-	<header class = "fluid-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-3 mr-auto">
-					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<a class="logo" href="/">
-						<img class="newappIcon" src="images/talkteam_logo.png">
-					</a>
-					<div class="login">
-						<% if (username) { %>
-							<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
+<header class = "fluid-container">
+	<div class="container">
+		<div class="row">
+			<div class="col-3 mr-auto">
+				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+				<a class="logo" href="/">
+					<img class="newappIcon" src="images/talkteam_logo1.png">
+				</a>
+				<div class="login">
+					<% if (username) { %>
+						<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
 
-						<% } %>
-						<% if (!username) { %>
-							<a id="loginButton" href="/login">Login</a>
-						<% } %>
-					</div>
+					<% } %>
+					<% if (!username) { %>
+						<a id="loginButton" href="/login">Login</a>
+					<% } %>
 				</div>
-				<div class="col-2 col-sm-9 col-xs-9 col-auto">
-					<a id="hamburger" href="#mainmenu"></a>
-					<nav id="mainmenu">
-						<ul>
-							<li><a href="/">Home</a></li>
+			</div>
+			<div class="col-2 col-sm-9 col-xs-9 col-auto">
+				<% if (typeof lang == 'undefined' || lang == 'en') { %>
+				<div class="mobile-lang">
+					<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+				</div>
+				<% } else if (lang == 'nl') { %>
+					<div class="mobile-lang">
+						<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+					</div>
+				<% } %>
+				<a id="hamburger" href="#mainmenu"></a>
+				<nav id="mainmenu">
+					<ul>
+						<% if (typeof lang == 'undefined' || lang == 'en') { %>
+							<li><a href="/home">Home</a></li>
 							<li><a href="/register">Register</a></li>
 							<li><a href="/downloads">Downloads</a></li>
 							<li><a href="/news">News</a></li>
-							<% if (typeof lang == 'undefined' || lang == 'en') { %>
-								<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
-							<% } else if (lang == 'nl') { %>
-								<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
-							<% } %>
-						</ul>
-					</nav>
-				</div>
-				<!-- <div class = "banner">
-				</div> -->
+						<% } else if (lang == 'nl') { %>
+							<li><a href="/home">Home</a></li>
+							<li><a href="/register">Registreer</a></li>
+							<li><a href="/downloads">Downloads</a></li>
+							<li><a href="/news">Nieuws</a></li>
+						<% } %>
+
+						<% if (typeof lang == 'undefined' || lang == 'en') { %>
+							<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+						<% } else if (lang == 'nl') { %>
+							<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+						<% } %>
+					</ul>
+				</nav>
 			</div>
 		</div>
-
+	</div>
 </header>
+
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
 			<img class="bannerimg" src="images/silhoutte2.jpg">
-			<!-- <img class="bannerimg" src="images/banner_talkteam1.png"> -->
 		</div>
 	</div>
 </div>
@@ -158,54 +191,14 @@
 
 </section>
 
-	<!-- <section>
-		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
-	</section> -->
 	<footer class="fluid-container">
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-		 <!-- <div>
-			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
-				<img src='images/detail.png' alt='detail'/>
 
-			<button class="addBtn" onclick="addItem()" title="add record">
-				<img src="images/add.png" alt="add">
-			</button>
-			<br>
-			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
-		</div>
-		<div id='appinfo' class = 'appinfo' style='display: none;'>
-						This application helps you organize your favorite files.</br>
-						Supports all file types, like Audio, Video, Photos, Text etc.</br>
-						Click on Add icon to create a new category for your files. Provide a title and description for the category in the text fields.</br>
-						To add a file to a given category, Click on 'Browse' button to select a file, and 'Upload' button to upload the file.
-						To modify a title or description, Edit the text and press Enter.</br>
-						You can add multiple files (of any type) to a category.</br>
-						Click on <span class = 'deleteBtn' alt='delete'></span> icon to delete the category.
-		</div>
-		<div id="loadingImage"></div>
-		<br><br><br><br><br>
-		<div id="errorDiv" class='errorMsg'></div>
-	</footer>
-	<script type="text/javascript" src="/scripts/util.js"></script>
-	<script type="text/javascript" src="/scripts/index.js"></script>
-	<div id="myImage"><div id="innerImg"></div></div>
-	<br><br><br>
-	</div> -->
 </div>
 <script src="./lib/domJSON.js"></script>
 <script type="text/javascript" src="/scripts/admin_cm.js"></script>
-
-	<script type="text/javascript">
-	$(document).ready(function() {
-		 $("#mainmenu").mmenu({
-				// options
-		 }, {
-				 // configuration
-				 clone:	'true',
-			});
-	});
-	</script>
+<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
