--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Favorites Organizer powered by Cloudant</title>
+	<!-- //Favicon tags -->
+	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
+	<title><%= title %></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -17,39 +36,61 @@
 <body>
 	<div id="wrap">
 
-	<header class = "fluid-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-3 mr-auto">
-					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<a class="logo" href="/">
-					  <img class="newappIcon" src="images/talkteam_logo.png">
-					</a>
-					<div class="login">
-						<% if (username) { %>
-							<span>Hello <%= username %></span>
-							<a id="logoutButton" href="/logout">Logout</a>
+		<header class = "fluid-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-3 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+						<a class="logo" href="/">
+							<img class="newappIcon" src="images/talkteam_logo1.png">
+						</a>
+						<div class="login">
+							<% if (username) { %>
+								<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
+
+							<% } %>
+							<% if (!username) { %>
+								<a id="loginButton" href="/login">Login</a>
+							<% } %>
+						</div>
+					</div>
+					<div class="col-2 col-sm-9 col-xs-9 col-auto">
+						<% if (typeof lang == 'undefined' || lang == 'en') { %>
+						<div class="mobile-lang">
+							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+						</div>
+						<% } else if (lang == 'nl') { %>
+							<div class="mobile-lang">
+								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+							</div>
 						<% } %>
-						<% if (!username) { %>
-							<a id="loginButton" href="/login">Login</a>
-						<% } %>
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li><a href="/home">Home</a></li>
+									<li><a href="/register">Register</a></li>
+									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/news">News</a></li>
+								<% } else if (lang == 'nl') { %>
+									<li><a href="/home">Home</a></li>
+									<li><a href="/register">Registreer</a></li>
+									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/news">Nieuws</a></li>
+								<% } %>
+
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+								<% } else if (lang == 'nl') { %>
+									<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+								<% } %>
+							</ul>
+						</nav>
 					</div>
 				</div>
-				<div class="col-2 col-sm-9 col-xs-9 col-auto">
-					<a id="hamburger" href="#mainmenu"></a>
-					<nav id="mainmenu">
-						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="/register">Register</a></li>
-							<li><a href="/downloads">Downloads</a></li>
-							<li><a href="/news">News</a></li>
-							<li class="english"><a href="/translate">EN</a></li>
-						</ul>
-					</nav>
-				</div>
-		</div>
+			</div>
+		</header>
 
-</header>
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
@@ -61,7 +102,9 @@
 <section class="container main">
 	<div class="row intro">
 
-		<div>
+		<div class="col-12">
+			<h2>Register</h2>
+			<p>Register your username and password here.</p>
 			<!-- <form id="regForm" method="post">
 					<input type="text" name="name" value="">
 					<input type="text" name="email" value="">
@@ -120,18 +163,9 @@
 	<br><br><br>
 	</div> -->
 	<!-- <script type="text/javascript" src="/scripts/util.js"></script> -->
-	<script type="text/javascript" src="/scripts/indexCustom.js"></script>
 
 </div>
-	<script type="text/javascript">
-	$(document).ready(function() {
-		 $("#mainmenu").mmenu({
-				// options
-		 }, {
-				 // configuration
-				 clone:	'true',
-			});
-	});
-	</script>
+	<script type="text/javascript" src="/scripts/indexCustom.js"></script>
+	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
