--- a/views/index.html
+++ b/views/index.html
@@ -44,15 +44,6 @@
 				<a class="logo" href="/">
 					<img class="newappIcon" src="images/talkteam_logo1.png">
 				</a>
-				<div class="login">
-					<% if (username) { %>
-						<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
-
-					<% } %>
-					<% if (!username) { %>
-						<a id="loginButton" href="/login">Login</a>
-					<% } %>
-				</div>
 			</div>
 			<div class="col-2 col-sm-9 col-xs-9 col-auto">
 				<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -80,12 +71,20 @@
 						<% } %>
 
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
-							<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+							<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 						<% } else if (lang == 'nl') { %>
-							<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+							<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
 						<% } %>
 					</ul>
 				</nav>
+				<div class="login">
+					<% if (username) { %>
+						<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+					<% } %>
+					<% if (!username) { %>
+						<a id="loginButton" href="/login">Login</a>
+					<% } %>
+				</div>
 			</div>
 		</div>
 	</div>
