--- a/views/logout.html
+++ b/views/logout.html
@@ -44,28 +44,49 @@
 						<a class="logo" href="/">
 							<img class="newappIcon" src="images/talkteam_logo1.png">
 						</a>
+					</div>
+					<div class="col-2 col-sm-9 col-xs-9 col-auto">
+						<% if (typeof lang == 'undefined' || lang == 'en') { %>
+						<div class="mobile-lang">
+							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+						</div>
+						<% } else if (lang == 'nl') { %>
+							<div class="mobile-lang">
+								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+							</div>
+						<% } %>
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li><a href="/home">Home</a></li>
+									<li><a href="/register">Register</a></li>
+									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/news">News</a></li>
+								<% } else if (lang == 'nl') { %>
+									<li><a href="/home">Home</a></li>
+									<li><a href="/register">Registreer</a></li>
+									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/news">Nieuws</a></li>
+								<% } %>
+
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+								<% } else if (lang == 'nl') { %>
+									<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+								<% } %>
+							</ul>
+						</nav>
 						<div class="login">
 							<% if (username) { %>
-								<span>Hello <%= username %></span>
-								<a id="logoutButton" href="/logout">Logout</a>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
 							<% if (!username) { %>
 								<a id="loginButton" href="/login">Login</a>
 							<% } %>
 						</div>
 					</div>
-					<div class="col-2 col-sm-9 col-xs-9 col-auto">
-						<a id="hamburger" href="#mainmenu"></a>
-						<nav id="mainmenu">
-							<ul>
-								<li><a href="/">Home</a></li>
-								<li><a href="/register">Register</a></li>
-								<li><a href="/downloads">Downloads</a></li>
-								<li><a href="/news">News</a></li>
-								<li class="english"><a href="/translate">EN</a></li>
-							</ul>
-						</nav>
-					</div>
+				</div>
 			</div>
 		</header>
 
