--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -43,15 +43,6 @@
 						<a class="logo" href="/">
 						  <img class="newappIcon" src="images/talkteam_logo1.png">
 						</a>
-						<div class="login">
-							<% if (username) { %>
-								<span>Hello <%= username %></span>
-								<a id="logoutButton" href="/logout">Logout</a>
-							<% } %>
-							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
-							<% } %>
-						</div>
 					</div>
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<a id="hamburger" href="#mainmenu"></a>
@@ -64,6 +55,14 @@
 								<li class="english"><a href="/translate">EN</a></li>
 							</ul>
 						</nav>
+						<div class="login">
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+							<% } %>
+							<% if (!username) { %>
+								<a id="loginButton" href="/login">Login</a>
+							<% } %>
+						</div>
 					</div>
 				</div>
 			</div>
