--- a/views/toc_user.html
+++ b/views/toc_user.html
@@ -44,15 +44,6 @@
 						<a class="logo" href="/">
 							<img class="newappIcon" src="images/talkteam_logo1.png">
 						</a>
-						<div class="login">
-							<% if (username) { %>
-								<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
-
-							<% } %>
-							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
-							<% } %>
-						</div>
 					</div>
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -86,6 +77,14 @@
 								<% } %>
 							</ul>
 						</nav>
+						<div class="login">
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+							<% } %>
+							<% if (!username) { %>
+								<a id="loginButton" href="/login">Login</a>
+							<% } %>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -128,6 +127,45 @@
 			  <dt>Expiration date license</dt>
 			  <dd><%= endDate %></dd>
 			</dl>
+		</div>
+		<div class="col-12 list_all_users">
+				<% userlist.forEach(function(user) { %>
+					<div class="user">
+						<h3>
+							<%= user.doc.organisationName %>
+							<%= user.doc.orgName %>
+						</h3>
+						<ul class="userInfo">
+							<% Object.keys(user.doc).forEach(function(key,value) { %>
+								<li><%= key %><%= key.value %></li>
+							<% }); %>
+						</ul>
+						<ul class="userInfo">
+							<% Object.values(user.doc).forEach(function(value) { %>
+								<li><%= value %></li>
+							<% }); %>
+						</ul>
+					</div>
+
+
+		        <!-- <dt><%= Object.keys(user.doc) %> - <%= user.value %></dt>
+		        <dd><%= JSON.stringify(user.doc._id) %> -  %></dd> -->
+
+		    <% }); %>
+
+
+			<!-- <% for(var i=0; i < userlist.length; i++) { %>
+				<table>
+						<tr>
+
+
+							<td><%= Object.keys(userlist[i].doc) %></td>
+							<td><%= Object.values(userlist[i].doc) %></td>
+						</tr>
+			 </table>
+			 <br>
+			<% } %> -->
+
 		</div>
 
 </section>
