--- a/views/faq.html
+++ b/views/faq.html
@@ -48,11 +48,11 @@
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						<div class="mobile-lang">
-							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+							<a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
 						</div>
 						<% } else if (lang == 'nl') { %>
 							<div class="mobile-lang">
-								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+								<a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
 							</div>
 						<% } %>
 						<a id="hamburger" href="#mainmenu"></a>
@@ -94,121 +94,104 @@
 	<div class="row">
 		<div class="col">
 			<img class="bannerimg" src="images/bannerblurred.png">
-			<!-- <img class="bannerimg" src="images/banner_talkteam1.png"> -->
 		</div>
 	</div>
 </div>
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h2>
-				Welcome, this is a authorized environment !	<br>
-			<span style="font-size: 10px;">u can only see this when you are logged in .</span>
+				Frequently asked questions
 			</h2>
-			<dl class="dl-horizontal">
-				<% if (admin) { %>
-					<legend>
-						<img class="admin_icon" src="images/admin_icon.png">
-						Admin account
-					</legend>
-				<% } %>
-			  <dt>_id</dt>
-			  <dd><%= _id %></dd>
-			  <dt>Organisation</dt>
-			  <dd><%= organisationName %></dd>
-			  <dt>Email</dt>
-			  <dd><%= organisationEmail %></dd>
-			  <dt>License key</dt>
-			  <dd><%= licensekey %></dd>
-			  <dt>Active</dt>
-			  <dd><%= active %></dd>
-			  <dt>Start subscription</dt>
-			  <dd><%= startDate %></dd>
-			  <dt>Expiration date license</dt>
-			  <dd><%= endDate %></dd>
-			</dl>
+
+      <div class="general">
+        <h3>General</h3>
+        <div class="qlist">
+          <div class="question">
+            Where can i send in questions ?
+            <div class="answer">
+              If the F.A.Q. page left your question un-answered you might want to try our <a href="#faqform">form</a> down below.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="personal">
+        <h3>Personal</h3>
+        <div class="qlist">
+          <div class="question">
+            Where can i send in questions ?
+            <div class="answer">
+              If the F.A.Q. page left your question un-answered you might want to try our <a href="#faqform">form</a> down below.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="banking">
+        <h3>Banking</h3>
+        <div class="qlist">
+          <div class="question">
+            Where can i send in questions ?
+            <div class="answer">
+              If the F.A.Q. page left your question un-answered you might want to try our <a href="#faqform">form</a> down below.
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <form id="faqform" class="" action="/post/faq" method="post">
+        <label for="form_subject">Subject:</label>
+        <select id="form_subject" name="subject">
+          <option value="general">general</option>
+          <option value="personal">personal</option>
+          <option value="banking">banking</option>
+          <option value="technical">technical</option>
+        </select>
+        <label for="form_organisation">Organisation:</label>
+        <input id="form_organisation" type="text" name="form_organisation" value="<%= organisationName %>" disabled="disabled">
+        <label for="form_question">Question:</label>
+        <input id="form_question" type="text" name="form_question">
+        <input type="submit" name="" value="Send">
+      </form>
 		</div>
-		<div class="col-12 list_all_users">
-				<% userlist.forEach(function(user) { %>
-					<div class="user">
-						<h3>
-							<img class="user_icon" src="images/organisation_icon.png">
-							<%= user.doc.organisationName %>
-							<%= user.doc.orgName %>
-						</h3>
-						<ul class="userInfo">
-							<% Object.keys(user.doc).forEach(function(key,value) { %>
-								<li><%= key %><%= key.value %></li>
-							<% }); %>
-						</ul>
-						<ul class="userInfo">
-							<% Object.values(user.doc).forEach(function(value) { %>
-								<li><%= value %></li>
-							<% }); %>
-						</ul>
-					</div>
 
+		<% if (typeof admin == 'undefined') { %>
 
-		        <!-- <dt><%= Object.keys(user.doc) %> - <%= user.value %></dt>
-		        <dd><%= JSON.stringify(user.doc._id) %> -  %></dd> -->
+		<% } else if (admin) { %>
+			<div class="adminPanel">
+				<form id="adminPost" action="/admin_cm/post" method="post">
+					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
+					<input id="currentPageVar" type="text" name="currentPageVar" hidden="true" value='<%= title %>'>
+					<input id="admin_ApplyButton" name="button" value="Apply">
+					<input id="admin_SafeButton" name="button" value="Save" type="submit">
+				</form>
+				<div id="setAdmin" hidden="true">toggle setAdmin</div>
+			</div>
+		<% } %>
 
-		    <% }); %>
-
-
-			<!-- <% for(var i=0; i < userlist.length; i++) { %>
-				<table>
-						<tr>
-
-
-							<td><%= Object.keys(userlist[i].doc) %></td>
-							<td><%= Object.values(userlist[i].doc) %></td>
-						</tr>
-			 </table>
-			 <br>
-			<% } %> -->
-
-		</div>
+		<input id="jsonConverter" type="text" name="_jsonConverter" hidden="true" value='<%= _jsonConverter %>'>
 
 </section>
 
-	<!-- <section>
-		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
-	</section> -->
 	<footer class="fluid-container">
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-		 <!-- <div>
-			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
-				<img src='images/detail.png' alt='detail'/>
 
-			<button class="addBtn" onclick="addItem()" title="add record">
-				<img src="images/add.png" alt="add">
-			</button>
-			<br>
-			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
-		</div>
-		<div id='appinfo' class = 'appinfo' style='display: none;'>
-						This application helps you organize your favorite files.</br>
-						Supports all file types, like Audio, Video, Photos, Text etc.</br>
-						Click on Add icon to create a new category for your files. Provide a title and description for the category in the text fields.</br>
-						To add a file to a given category, Click on 'Browse' button to select a file, and 'Upload' button to upload the file.
-						To modify a title or description, Edit the text and press Enter.</br>
-						You can add multiple files (of any type) to a category.</br>
-						Click on <span class = 'deleteBtn' alt='delete'></span> icon to delete the category.
-		</div>
-		<div id="loadingImage"></div>
-		<br><br><br><br><br>
-		<div id="errorDiv" class='errorMsg'></div>
-	</footer>
-	<script type="text/javascript" src="/scripts/util.js"></script>
-	<script type="text/javascript" src="/scripts/index.js"></script>
-	<div id="myImage"><div id="innerImg"></div></div>
-	<br><br><br>
-	</div> -->
 </div>
-	<script type="text/javascript" src="/scripts/loginbutton.js"></script>
-	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    var question = $(".question");
+    $(question).on('click', function(){
+      // var $(this) = $(this).find('.answer');
+      $(this).children('.answer').slideToggle();
+    })
+    // $(currentLinkMM).parent().addClass('active');
+  });
+</script>
+<script src="./lib/domJSON.js"></script>
+<script type="text/javascript" src="/scripts/admin_cm.js"></script>
+<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
