--- a/views/toc_user.html
+++ b/views/toc_user.html
@@ -62,11 +62,13 @@
 									<li><a href="/home">Home</a></li>
 									<li><a href="/register">Register</a></li>
 									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
 									<li><a href="/news">News</a></li>
 								<% } else if (lang == 'nl') { %>
 									<li><a href="/home">Home</a></li>
 									<li><a href="/register">Registreer</a></li>
 									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
 									<li><a href="/news">Nieuws</a></li>
 								<% } %>
 
