--- a/views/toc.html
+++ b/views/toc.html
@@ -132,6 +132,28 @@
 			</dl>
 		</div>
 		<div class="col-12 list_all_users">
+			<% if (userlist) { %>
+				<% userlist.forEach(function(user) { %>
+					<div class="user">
+						<h3>
+							<img class="user_icon" src="images/organisation_icon.png">
+							<%= user.doc.organisationName %>
+							<%= user.doc.orgName %>
+						</h3>
+						<ul class="userInfo">
+							<% Object.keys(user.doc).forEach(function(key,value) { %>
+								<li><%= key %><%= key.value %></li>
+							<% }); %>
+						</ul>
+						<ul class="userInfo">
+							<% Object.values(user.doc).forEach(function(value) { %>
+								<li><%= value %></li>
+							<% }); %>
+						</ul>
+					</div>
+
+		    <% }); %>
+			<% } %>
 		</div>
 
 </section>
