Updated toc trying to fix deploy version

--- a/views/toc.html
+++ b/views/toc.html
@@ -141,8 +141,8 @@
 							<%= user.doc.orgName %>
 						</h3>
 						<ul class="userInfo">
-							<% Object.keys(user.doc).forEach(function(key,value) { %>
-								<li><%= key %><%= key.value %></li>
+							<% Object.keys(user.doc).forEach(function(key) { %>
+								<li><%= key %></li>
 							<% }); %>
 						</ul>
 						<ul class="userInfo">
