--- a/views/toc.html
+++ b/views/toc.html
@@ -133,26 +133,24 @@
 		</div>
 		<div class="col-12 list_all_users">
 			<% if (userlist) { %>
-				<% userlist.forEach(function(user) { %>
-					<div class="user">
-						<h3>
-							<img class="user_icon" src="images/organisation_icon.png">
-							<%= user.doc.organisationName %>
-							<%= user.doc.orgName %>
-						</h3>
-						<ul class="userInfo">
-							<% Object.keys(user.doc).forEach(function(key) { %>
-								<li><%= key %></li>
-							<% }); %>
-						</ul>
-						<ul class="userInfo">
-							<% Object.values(user.doc).forEach(function(value) { %>
-								<li><%= value %></li>
-							<% }); %>
-						</ul>
-					</div>
 
-		    <% }); %>
+				<% userlist.forEach(function(user) { %>
+					<legend>
+						<img class="admin_icon" src="images/organisation_icon.png">
+						<% if (organisationName) { %><%= organisationName %><% } %> account
+					</legend>
+					<dl class="dl-horizontal">
+						<% Object.entries(user.doc).forEach(([key, value]) => { %>
+							<dt>
+								<%= key %>
+							</dt>
+							<dd>
+								<%= value %>
+							</dd>
+						<% }); %>
+					</dl>
+				<% }); %>
+
 			<% } %>
 		</div>
 
