--- a/views/toc.html
+++ b/views/toc.html
@@ -31,6 +31,7 @@
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.mmenu.all.js"></script>
+	<script src="/js/polyfill.js"></script>
 </head>
 
 <body>
