--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -71,7 +71,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/bannerblurred.png">
+			<img class="bannerimg" src="images/silhoutte2.jpg">
 		</div>
 	</div>
 </div>
