--- a/views/toc.html
+++ b/views/toc.html
@@ -96,7 +96,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/bannerblurred.png">
+			<img class="bannerimg" src="images/silhoutte2.jpg">
 			<!-- <img class="bannerimg" src="images/banner_talkteam1.png"> -->
 		</div>
 	</div>
