--- a/views/register.html
+++ b/views/register.html
@@ -59,15 +59,21 @@
 						<nav id="mainmenu">
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li><a href="/home">Home</a></li>
-									<li><a href="/register">Register</a></li>
-									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/news">News</a></li>
+								  <li><a href="/home">Home</a></li>
+									<% if (!username) { %>
+										<li><a href="/register">Register</a></li>
+									<% } %>
+								  <li><a href="/downloads">Downloads</a></li>
+								  <li><a href="/faq">F.A.Q</a></li>
+								  <li><a href="/news">News</a></li>
 								<% } else if (lang == 'nl') { %>
-									<li><a href="/home">Home</a></li>
-									<li><a href="/register">Registreer</a></li>
-									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/news">Nieuws</a></li>
+								  <li><a href="/home">Home</a></li>
+									<% if (!username) { %>
+										<li><a href="/register">Registreer</a></li>
+									<% } %>
+								  <li><a href="/downloads">Downloads</a></li>
+								  <li><a href="/faq">F.A.Q</a></li>
+								  <li><a href="/news">Nieuws</a></li>
 								<% } %>
 
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -108,7 +114,7 @@
 					<input type="text" name="name" value="">
 					<input type="text" name="email" value="">
 			</form> -->
-			<form id="regForm" method="post">
+			<form id="regForm" class="shortForm" method="post">
 			    <div>
 			        <label>Username:</label>
 			        <input type="text" name="username"/><br/>
@@ -116,6 +122,9 @@
 			    <div>
 			        <label>Password:</label>
 			        <input type="password" name="password"/>
+			    </div>
+					<div>
+						<input type="submit" onclick="/post/registerform">
 			    </div>
 			    <!-- <div><input type="submit" value="Sign Up"/></div> -->
 			</form>
@@ -164,7 +173,6 @@
 	<!-- <script type="text/javascript" src="/scripts/util.js"></script> -->
 
 </div>
-	<script type="text/javascript" src="/scripts/indexCustom.js"></script>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
