--- a/views/content.html
+++ b/views/content.html
@@ -167,7 +167,7 @@ Welcome <%= username %>, this is a authorized environment !	<br>
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-
+	</footer>
 </div>
 	<script type="text/javascript" src="/scripts/loginbutton.js"></script>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
