--- a/views/index.html
+++ b/views/index.html
@@ -200,7 +200,7 @@
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-
+	</footer>
 </div>
 <script src="./lib/domJSON.js"></script>
 <script type="text/javascript" src="/scripts/admin_cm.js"></script>
