--- a/views/unauthorised.html
+++ b/views/unauthorised.html
@@ -71,6 +71,7 @@
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
+	</footer>
 		 <!-- <div>
 			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
 				<img src='images/detail.png' alt='detail'/>
