--- a/views/login.html
+++ b/views/login.html
@@ -72,7 +72,7 @@
 										<li><a href="/register">Registreer</a></li>
 									<% } %>
 									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/faq">F.A.Q</a></li>									
+									<li><a href="/faq">F.A.Q</a></li>
 									<li><a href="/news">Nieuws</a></li>
 								<% } %>
 
@@ -129,7 +129,7 @@
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-
+	</footer>
 </div>
 <script type="text/javascript" src="/scripts/util.js"></script>
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
