--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -98,7 +98,7 @@
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-
+	</footer>
 </div>
 	<script type="text/javascript" src="/scripts/util.js"></script>
 	<script type="text/javascript" src="/scripts/index.js"></script>
